# littlesongplace

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  schema.sql  schema_revert.sql  schema_update.sql  test.py  todo.txt
.github/workflows/: deploy-test.yml  test-and-deploy.yml
obs_scripts/: user_colors.py
pip/: dev-requirements.txt  requirements.txt
service/: prod.service  run.sh  test.service
src/littlesongplace/: __init__.py  activity.py  auth.py  colors.py  comments.py  datadir.py  db.py  jams.py  logutils.py  notifications.py  playlists.py  profiles.py  push_notifications.py  sanitize.py  songs.py  users.py
src/littlesongplace/sql/: schema.sql  schema_revert.sql  schema_update.sql
src/littlesongplace/static/: manifest.json  nav.js  player.js  service.js  styles.css
src/littlesongplace/templates/: about.html  activity.html  base.html  comment-thread.html  comment.html  edit-song.html  folks.html  index.html  jam-event-list.html  jam-event.html  jam.html  jams-main.html  login.html  news.html  notifications.html  (+7 more)
static/: nav.js  player.js  styles.css
templates/: activity.html  base.html  base.json  comment-thread.html  comment.html  edit-song.html  index.html  login.html  news.html  playlist.html  profile.html  signup.html  song-list.html  song-macros.html  song.html  songs-by-tag.html  users.html
test/: conftest.py  test_activity.py  test_auth.py  test_comments.py  test_jams.py  test_news.py  test_offline.py  test_online.py  test_playlists.py  test_profile.py  test_songlists.py  test_songs.py  utils.py
