[project]
name = "littlesongplace"
version = "1.0.0"
dependencies = [
    "bcrypt",
    "bleach[css]",
    "flask",
    "gunicorn",
    "pillow",
    "yt-dlp",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "yt: mark youtube importer tests",
]
